--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,4 @@
-/ActFuns.Nuget.Server/*.suo
-/ActFuns.Nuget.Server/packages
-/ActFuns.Nuget.Server/ActFuns.Nuget.Server/*
-/*.suo
-/ActFuns.Nuget.Server/obj
-/ActFuns.Nuget.Server/bin
+*.suo
+/packages
+obj
+bin
